# meta-ads-mcp

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  SPEC.md  pyproject.toml
meta_ads_mcp/: __init__.py  auth.py  config.py  coordinator.py  diagnostics.py  errors.py  graph_api.py  normalize.py  pagination.py  schemas.py  server.py  stdio.py
meta_ads_mcp/context/: insights_metrics.md  object_model.md  optimization_playbook.md  v25_notes.md
meta_ads_mcp/tools/: __init__.py  ads.py  audiences.py  auth_tools.py  campaigns.py  creatives.py  diagnostics.py  discovery.py  docs.py  execution.py  insights.py  recommendations.py  research.py  social_feedback.py  targeting.py  utility.py
tests/: conftest.py  test_coordinator.py  test_diagnostics.py  test_graph_api.py  test_live_integration.py  test_normalize.py  test_pagination.py  test_server.py  test_stdio.py  test_tool_contracts.py  test_tools_ads.py  test_tools_audiences.py  test_tools_auth.py  test_tools_campaigns.py  test_tools_creatives.py  test_tools_diagnostics.py  test_tools_discovery.py  test_tools_docs.py  test_tools_execution.py  test_tools_insights.py  test_tools_recommendations.py  test_tools_research.py  test_tools_social_feedback.py  test_tools_targeting.py  test_tools_utility.py  test_transport_smoke.py
