[project]
name = "meta-ads-fastmcp"
version = "0.1.0"
description = "Optimization-first FastMCP server for Meta Ads."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Jeff Lai" }
]
license = "MIT"
dependencies = [
  "fastmcp==3.1.0",
  "mcp==1.26.0",
  "httpx[http2]==0.28.1",
  "pydantic==2.12.5",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
]

[project.scripts]
run-meta-ads-mcp = "meta_ads_mcp.stdio:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true

[build-system]
requires = ["setuptools==82.0.0", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"meta_ads_mcp" = ["context/*.md"]
